<resources>
    <string name="app_name">UWindsor Forum</string>
    <!-- Strings for the Sign-Up Screen -->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="send_code">Send Code</string>
    <string name="verification_code">Verification Code</string>
    <!-- Strings for the Welcome Screen -->
    <string name="welcome_message">Welcome to the App!</string>
    <string name="login">Login</string>
    <string name="logo">Logo</string>
    <string name="forgot_password">forgot_password</string>
    <string name="welcome_messages">Welcome, %1$s!</string>
    <string name="logo_description">Logo description</string>
    <string name="btn_category">Category</string>
    <string name="enter_thread_title">Enter thread title</string>
    <string name="title">Title</string>
    <string name="enter_thread_content">Enter Thread Content</string>
    <string name="content">Content ....</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="post_a_new_thread">Post a New Thread</string>

</resources>